freest/test/prog/Invalid/Typing/LinConsumedInUnFun/LinConsumedInUnFun.fst
module LinConsumedInUnFun where

foo : !Int; Close -> Int -> Close
foo o n = send n o
